test/good/classes/unification04.px

class A def
    func f() def
        print "A"

class B(A) def
    func f() def
        print "B"


func get<T>(a: T*A): A def
    print a.a
    return a.b

get((4, B())).f()
get(("$$$", A())).f()
get((-3.75, B())).f()
