test/bad/generics/call07.px

func f<A>(g: A->A->A) def
    return

f(max)
